--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.0.2",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
     "uniqolor": "^1.1.0",
