--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/light-js": "^0.2.63",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "firebase-admin": "^13.0.2",
