--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+#.gitignore, .eslintignore, .prettierignore
+    
+# Pinegrow
+_pgbackup
+_pginfo
+
+## optional
+pinegrow.json
+
+
+## optional
+## Uncomment the below as per your needs
+## add any d.ts files that are auto-generated, for eg,
+# auto-imports.d.ts
+# components.d.ts
+# composables.d.ts
+## rollup visualizer
+stats.html
