--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@pinegrow/tailwindcss-plugin": "^3.0.35",
+    "@pinegrow/vite-plugin": "^3.0.69",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.0.0"
   }
 }
