--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^13.0.2",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
+    "soundtouchjs": "^0.1.30",
     "uniqolor": "^1.1.0",
     "vue": "^3.2.45",
     "vue-material-design-icons": "^5.1.2",
