--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@lottiefiles/dotlottie-vue": "^0.5.6",
     "@mdi/light-js": "^0.2.63",
+    "@stripe/stripe-js": "^5.7.0",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "firebase-functions": "^6.3.2",
@@ -22,6 +24,7 @@
     "vue-masonry-css": "^1.0.3",
     "vue-material-design-icons": "^5.1.2",
     "vue-router": "^4.1.6",
+    "vue-stripe-js": "^2.0.2",
     "wavesurfer.js": "^7.9.0"
   },
   "devDependencies": {
