--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-functions": "^6.3.2",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
+    "powerglitch": "^2.4.0",
     "tone": "^15.0.4",
     "uniqolor": "^1.1.0",
     "vue": "^3.2.45",
